--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "stripe": "^14.19.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "zukeeper": "^1.0.2",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
